[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
name = "pandoc-ac"
version = "0.1.0"

[lib]
name = "pandoc_ac"
path = "src/lib.rs"

[[bin]]
name = "pandoc-ac"
path = "src/main.rs"
doc = false

[dependencies]
failure = "0.1.3"
pandoc_ast = "0.7.2"
regex = "1.0.6"
lazy_static = "1.2.0"

[dev-dependencies]
pandoc = "0.7.0"
serde = "1.0.80"
serde_json = "1.0.33"
tempfile = "3.0"
