[package]
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
name = "pandoc-ac"
version = "0.1.0"
description = "A simple pandoc filter for converting acronym codes to LaTeX"
repository = "https://github.com/Enet4/pandoc-ac"
keywords = ["pandoc", "pandoc-filter", "acronym"]
categories = ["encoding", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "readme.md"

[lib]
name = "pandoc_ac"
path = "src/lib.rs"

[[bin]]
name = "pandoc-ac"
path = "src/main.rs"
doc = false

[dependencies]
failure = "0.1.5"
pandoc_ast = "0.7.2"
regex = "1.1.0"
lazy_static = "1.2.0"

[dev-dependencies]
pandoc = "0.7.0"
serde = "1.0.84"
serde_json = "1.0.34"
tempfile = "3.0"
pretty_assertions = "0.5.1"
